@@ -367,7 +367,8 @@ eval("page" + id + " = window.open(URL, '" + id + "', 'toolbars=0, scrollbars=0,
 						<INPUT TYPE="TEXT" NAME="email" SIZE="10" VALUE="ur@email.com"><BR>
 						<INPUT TYPE="HIDDEN" NAME="subscribe" SIZE="-1" VALUE="subscribe"><INPUT TYPE="IMAGE" SRC="/images/subscribe.gif" WIDTH="80"
 						HEIGHT="27" ALIGN="BOTTOM" BORDER="0"></FONT>
-						</FORM> --><form action="http://bp6.gamesquad.net/cgi-bin/news/viewnews.cgi?emaillist" method="post">
+						</FORM> -->
+            <form action="http://bp6.gamesquad.net/cgi-bin/news/viewnews.cgi?emaillist" method="post">
 <img height="1" src="doc3_files/spacer.gif" width="111"><br><font size="1">Newsletter<br><input name="npemail" size="13" value="e-mail addr."><br><input name="npsubscribe" style="BACKGROUND-COLOR: #000000; COLOR: #ffffff; FONT-FAMILY: Verdana; FONT-SIZE: xx-small; FONT-WEIGHT: bold" type="submit" value="Subscribe"><br><!-- <input type="submit" name="npunsubscribe" value="Unsubscribe" style="font-size: xx-small; font-family: Verdana; font-weight: bold; color: #ffffff; background-color: #000000;"> --></font>
 </form>
 <font size="1">
@@ -384,7 +385,8 @@ eval("page" + id + " = window.open(URL, '" + id + "', 'toolbars=0, scrollbars=0,
 					</TR>
 				</TABLE> 
 --><table bgcolor="silver" border="0" cellpadding="0" cellspacing="0" width="100%"><tbody><tr><td align="middle" width="100%">
-<!-- BEGIN GoTo.com Search Box --><script language="javascript" type="text/javascript">
+<!-- BEGIN GoTo.com Search Box -->
+            <script language="javascript" type="text/javascript">
 							<!--
 							if ((parseInt(navigator.appVersion) >= 3)
 							&& (navigator.appName != "Netscape")) {
@@ -414,7 +416,8 @@ eval("page" + id + " = window.open(URL, '" + id + "', 'toolbars=0, scrollbars=0,
 							}
 							// -->
 							</script><b><noscript></noscript></b><a href="http://www.goto.com/d/search/ssn/?fromGIF=true" target="_blank"><img align="bottom" border="0" height="90" ismap src="doc3_files/100x90.gif" width="100"></a><b><a href="http://www.goto.com/d/search/ssn/?fromGIF=true" target="_blank"> 
-            </a></b><b></b><b><!-- END GoTo.com Search Box --></b><!-- Pricewatch Search Box --><form action="http://www.pricewatch.com/search/search.asp" method="get" target="_Blank">
+            </a></b><b></b><b><!-- END GoTo.com Search Box --></b><!-- Pricewatch Search Box -->
+            <form action="http://www.pricewatch.com/search/search.asp" method="get" target="_Blank">
             <center>
             <p><b><font color="white" face="ARIAL, HELVETICA" size="1">PC Price 
             Search<br></font></b><input maxlength="30" name="criteria" size="10"><br><input name="submit" style="BACKGROUND-COLOR: #000000; COLOR: #ffffff; FONT-FAMILY: Verdana; FONT-SIZE: xx-small; FONT-WEIGHT: bold" type="submit" value="Search"></p>
